--- a/auth-server/package.json
+++ b/auth-server/package.json
@@ -8,5 +8,8 @@
   },
   "author": "",
   "license": "ISC",
-  "keywords": []
+  "keywords": [],
+  "dependencies": {
+    "googleapis": "^137.1.0"
+  }
 }
