--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -1,5 +1,7 @@
 # "org" ensures this Service is used with the correct Serverless Framework Access Key.
 org: rkanishka
+# "app" enables Serverless Framework Dashboard features and sharing them with other Services.
+app: meet
 # "service" is the name of this project. This will also be added to your AWS resource names.
 service: auth-server
 
