--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -1,17 +1,25 @@
 # "org" ensures this Service is used with the correct Serverless Framework Access Key.
 org: rkanishka
-# "app" enables Serverless Framework Dashboard features and sharing them with other Services.
-app: meet
 # "service" is the name of this project. This will also be added to your AWS resource names.
 service: auth-server
 
 provider:
   name: aws
   runtime: nodejs20.x
+  region: eu-central-1
+  timeout: 30 # optional, in seconds, deafult is 6
+
+  environment:
+  CLIENT_ID: ${file(config.json):CLIENT_ID}
+    CLIENT_SECRET: ${file(config.json):CLIENT_SECRET}
+    CALENDAR_ID: ${file(config.json):CALENDAR_ID}
 functions:
-  hello:
-    handler: handler.hello
+
+functions:
+getAuthURL:
+  
+    handler: handler.getAuthURLserverless
     events:
       - httpApi:
-          path: /
+          path: api/get-auth-url
           method: get
